team section added

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,14 +14,45 @@
 
 .link-text a:hover{
     color: #505050;
-    text-decoration: none;
 }
 
-.contact h1{
+.header{
     color: #0d052e;
 }
 
 .contact-input{
     max-width: 600px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.gradient-btn{
+    background-image: linear-gradient(to right, #1DD9B7 , #0AB3E1);
+    padding: 10px 20px 10px 20px !important;
+    color: #fff !important;
+    border: none;
+}
+
+.radius-btn{
+    border-radius: 25px 0 25px 0 !important;
+}
+
+.team-item{
+    border: 3px solid white;
+}
+
+.team-item span{
+    font-size: 2.5rem;
+}
+
+.team-item:hover{
+    border: 3px solid #52e9be;
+}
+
+.team-item:hover .team-btn{
+    visibility: visible !important;
+}
+
+.line{
+    width: 65%;
+    border-bottom: 2px solid #4fd1cb;
 }
