--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,10 +16,6 @@
     color: #505050;
 }
 
-.header{
-    color: #0d052e;
-}
-
 .contact-input{
     max-width: 600px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -27,13 +23,17 @@
 
 .gradient-btn{
     background-image: linear-gradient(to right, #1DD9B7 , #0AB3E1);
-    padding: 10px 20px 10px 20px !important;
+    padding: 10px 20px !important;
     color: #fff !important;
     border: none;
 }
 
 .radius-btn{
-    border-radius: 25px 0 25px 0 !important;
+    border-radius: 25px 0 !important;
+}
+
+.radius-div{
+    border-radius: 0 70px ;
 }
 
 .team-item{
