--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,15 @@
   background-color: #F8FDFB;
 }
 
+h1, h5{
+  color: #0d052e;
+  font-weight: bold;
+}
+
 h1{
   font-family: 'Yeseva One', cursive;
-  color: #0d052e;
+}
+
+small{
+  color: gray;
 }
