--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -56,3 +56,23 @@
     width: 65%;
     border-bottom: 2px solid #4fd1cb;
 }
+
+.achievementItem{
+    box-shadow: #d0fbe6 0px 8px 24px;
+}
+
+.achievementItem:hover{
+    background-image: linear-gradient(90deg,#0ebbdc 0,#0ebbdc 51%,#1ddbb6) !important;
+    color: white !important;
+}
+
+.services-img{
+    width: 90px;
+    height: 90px;
+}
+
+.serviceItem:hover{
+    background-color: white;
+    border-radius: 70px 0 ;
+    box-shadow: #d0fbe6 0px 8px 24px;
+}
