--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -74,5 +74,5 @@
 .serviceItem:hover{
     background-color: white;
     border-radius: 70px 0 ;
-    box-shadow: #d0fbe6 0px 8px 24px;
+    box-shadow: #bdf1d7 0px 8px 24px;
 }
