--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,6 +1,6 @@
 .banner-area{
     background-image:url('../../images/banner.png');
-    background-attachment:fixed;
+    /* background-attachment:fixed; */
     background-repeat: no-repeat;
     background-size: cover;
     /* background-position: center; */
